<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Covid 19 Data</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="worldwide_title">WorldWide</string>
    <string name="bycountries_title">"By Countries"</string>
    <string name="latestnews_title">"Latest News"</string>
    <string name="setting_title">"Setting"</string>
    <string name="home">Home</string>
    <string name="countries">Countries</string>
    <string name="latest_covid_19_news">Latest News</string>
    <string name="setting">Setting</string>
    <string name="about_this_app">"About"</string>
    <string name="last_updated_at">"Last Updated At :"</string>
    <string name="worldwide">WorldWide</string>
    <string name="total_cases">Total Cases</string>
    <string name="divider">:</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="change_system_color">"Change System Color"</string>
    <string name="english">English</string>
    <string name="myanmar_unicode">"Myanmar\n(Unicode)"</string>
    <string name="myanmar_zawgyi">"Myanmar\n(Zawgyi)"</string>
    <string name="change_system_language">"Change System Language"</string>
    <string name="country_flags_photo">CountryFlagsPhoto</string>
    <string name="red_color_button">Red Color Button</string>
    <string name="blue_color_button">Blue Color Button</string>
    <string name="green_color_button">Green Color Button</string>
    <string name="search" translatable="false">Search</string>
    <string name="this_app_is_developed_by" translatable="false">This app is developed by</string>
    <string name="phone_thet_khine" translatable="false">Phone Thet Khine</string>
    <string name="about_description" translatable="false">The purpose of this app is to view the updated information of Covid 19 around the world.</string>
    <string name="suggestion" translatable="false">If you found bugs or any suggestions, contact me by email (phonethetkhine2967@gmail.com) or by clicking my name from above.</string>
    <string name="tested_deviceslabel" translatable="false">Tested Devices</string>
    <string name="tested_devices" translatable="false">"1. Nexus S (4", 480x800 resolution, hdpi density)\n\n
2. Galaxy Nexus (4.65", 720x1280 resolution, xhdpi density)\n\n3. Pixel 2 (5", 1080x1920 resolution, 420dpi density)\n\n4. Pixel XL(5.5", 1440x2560 resolution, 560dpi density)\n\n5. Pixel 3a XL(6", 1080x2160 resolution, 400 dpi density)\n\n6. Pixel 3XL(6.3", 1440x2960 resolution, 560 dpi density)\n\n7. Nexus 7(2012) (7", 1200x1920 resolution, tvdpi density)\n\n8. Nexus 9 (8.86", 2048x1536 resolution, xhdpi density)\n\n9. Nexus 10 (10.055", 2560x1600 resolution, xhdpi density)"
</string>
    <string name="tested_android_versionlabel" translatable="false">Tested Android Version</string>
    <string name="tested_android_version" translatable="false">
"1. Lollipop API 21 (Android Version 5.0)
   -x86, -x86/64 without google APIs.
   -x86, -x86/64// with google APIs.

2. Lollipop API 22(Android Version 5.1)
   -x86, with google APIs.

3. MarshMallow API 23(Android Version 6.0)
   -x86, without google APIs.

4. Nougat API 24(Android Version 7.0)
   -x86, without google APIs.

5. Nougat API 25(Android Version 7.1.1)
   -x86, without google APIs.

6. Oreo API 26(Android Version 8.0)
   -x86, without google APIs.

7. Oreo API 27(Android Version 8.1)
   -x86, without google APIs.

8. Pie API 28(Android Version 9.0)
   -x86, without google APIs.

9. R API R(Android Version 30)
   -x86, without google APIs."
</string>
    <string name="credits" translatable="false">Credits :</string>
    <string name="data_sourceslabel" translatable="false">Data Sources :</string>
    <string name="data_sources" translatable="false">1. <b>Covid 19 Data by John Hopkins University CSSE (Mathdroid)</b> ->\n https://github.com/mathdroid/covid-19-api\n\n2. <b>Covid 19 news by newsapi.org</b>\nhttps://newsapi.org/
    </string>
    <string name="libraries_usedlabel" translatable="false">3rd Party Libraries Used : </string>
    <string name="library_used" translatable="false" tools:ignore="TypographyOther">"1. <b>Retrofit by Square</b> -> for networking\n\n2. <b>Picasso by Square</b> -> for showing flags\n\nLicense :\nCopyright 2013 Square, Inc.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
        limitations under the License.\n\n3. <b>Gif Library by Koral</b> -> for showing gif\n\nLicense : \nMIT License\nCopyright (c) 2013 - present Karol Wrótniak, Droids on Roids LLC
Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the right
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:
The above copyright notice and this permission notice shall be included in
        all copies or substantial portions of the Software.\n\n4. <b>Lottie Library by airbnb</b> -> for using LottieAlertDialog\n\nLicense : \nCopyright 2018 Airbnb, Inc.
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
       http://www.apache.org/licenses/LICENSE-2.0
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
        limitations under the License.\n\n5. <b>LottieAlertDialog Library by Mayuce</b> -> for showing Dialogs\n\nLicense : \nMIT License
Copyright (c) 2019 Muhammet Ali YUCE
Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:
The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE."</string>
    <string name="icons_usedlabel" translatable="false">Icons Used :</string>
    <string name="icon_used" translatable="false">1. <b>App Icon by ndresponse.gov</b> ->\nhttps://ndresponse.gov/sites/www/files/documents/icons/virus.png</string>
    <string name="gif_usedlabel" translatable="false">GIF Used :</string>
    <string name="gif_used" translatable="false">1. <b>Splash Loading Gif by CDC</b> ->\nhttps://www.cdc.gov/handwashing/images/campaign2018/GHD-UVLight-1080x1080.gif\n\n2.<b>Background Particles GIF by gfycat.com</b> ->\nhttps://thumbs.gfycat.com/QuickDamagedHoneyeater-size_restricted.gif\n\n3.<b>No Internet Gif by Dribble.com</b> ->\nhttps://cdn.dribbble.com/users/1078347/screenshots/3066592/nointernetconnection_emptystate_2.gif
    </string>
    <string name="flags_usedlabel" translatable="false">Flags Used :</string>
</resources>