<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item

        android:id="@+id/mitemMainLinks"

        android:title="@string/main_links">
        <menu>
            <group

                android:checkableBehavior="single">
                <item

                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home_black_24dp"

                    android:title="@string/home"
                    app:showAsAction="always"
                    tools:ignore="AlwaysShowAction" />
                <item

                    android:id="@+id/nav_countries"
                    android:icon="@drawable/ic_public_black_24dp"
                    android:title="@string/countries"
                    app:showAsAction="always" />
                <item
                    android:id="@+id/nav_news"

                    android:icon="@drawable/ic_assignment_black_24dp"
                    android:title="@string/latest_covid_19_news"
                    app:showAsAction="always" />

            </group>
        </menu>
    </item>
    <item
        android:id="@+id/mimOtherLinks"
        android:title="@string/other_links">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_Setting"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/setting"
                    app:showAsAction="always" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_info_black_24dp"
                    android:title="@string/about_this_app"
                    app:showAsAction="always" />


            </group>

        </menu>
    </item>

</menu>